Initial commit of second-phase pooling.
For the 2014 evaluation assessment, coreferene is being annotation first, then response assessment is being done.
We can exploit the coref annotation to reduce the number of tuples needing assessment.

--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -125,8 +125,16 @@
 			<name>applyLinkingStrategy</name>
 			<jvmSettings>
 				<maxMemorySize>1g</maxMemorySize>
-			</jvmSettings>	
+			</jvmSettings>
 		</program>
+
+                <program>
+                    <mainClass>com.bbn.kbp.events2014.bin.SecondPhaseAssessmentPooler</mainClass>
+                    <name>secondPhaseAssessmentPooler</name>
+                    <jvmSettings>
+                        <maxMemorySize>1g</maxMemorySize>
+                    </jvmSettings>
+                </program>
 
             </programs>
       </configuration>
